internal/testdata/node/ingress-templates/ingress-14/example.com.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-ingress-class: custom-ingress
    fastly.amazee.io/watch: "false"
    idling.amazee.io/disable-request-verification: "false"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    lagoon.sh/branch: main
    lagoon.sh/version: v2.7.x
    monitor.stakater.com/enabled: "true"
    monitor.stakater.com/overridePath: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    uptimerobot.monitor.stakater.com/alert-contacts: alertcontact
    uptimerobot.monitor.stakater.com/interval: "60"
    uptimerobot.monitor.stakater.com/status-pages: statuspageid
  labels:
    activestandby.lagoon.sh/migrate: "false"
    app.kubernetes.io/instance: example.com
    app.kubernetes.io/managed-by: build-deploy-tool
    app.kubernetes.io/name: custom-ingress
    lagoon.sh/autogenerated: "false"
    lagoon.sh/buildType: branch
    lagoon.sh/environment: main
    lagoon.sh/environmentType: production
    lagoon.sh/primaryIngress: "true"
    lagoon.sh/project: example-project
    lagoon.sh/service: example.com
    lagoon.sh/service-type: custom-ingress
    lagoon.sh/template: custom-ingress-0.1.0
    route.lagoon.sh/source: yaml
  name: example.com
spec:
  ingressClassName: custom-ingress
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: node
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - example.com
    secretName: example.com-tls
status:
  loadBalancer: {}
